--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@
 
 body {
     font-size: 16px;
+    background-color: #eee;
+}
+
+.container {
+    width: 900px;
+    margin: 0 auto;
+    display: flex;
 }
 
 .float-right {
@@ -41,10 +48,23 @@ body {
     align-items: center;
 }
 
+
+/* Header */
+
+.header {
+    height: 55px;
+    width: 100%;
+    border-bottom: 1px solid #d0cece;
+    margin-bottom: 30px;
+    background-color: #fff;
+}
+
 .story-box {
     display: flex;
     flex-direction: row;
     padding: 10px 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .story-info {
@@ -67,9 +87,10 @@ body {
     align-items: center;
     justify-content: center;
     margin-right: 10px;
+    z-index: 0;
 }
 
-.story-box .profile-image::after {
+.story-box .profile-image::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -106,6 +127,7 @@ body {
     text-decoration: none;
     color: #0095f6;
     font-weight: bold;
+    font-size: 0.8rem;
 }
 
 .profile-wrap {
@@ -118,8 +140,10 @@ body {
 }
 
 .post-wrap {
-    border: 1px solid #bbb;
+    border: 1px solid #d0cece;
     border-radius: 5px;
+    margin-bottom: 50px;
+    background-color: #fff;
 }
 
 .post-wrap .image {
@@ -196,7 +220,7 @@ body {
 
 .add-comment {
     padding: 20px;
-    border-top: 1px solid #bbb;
+    border-top: 1px solid #d0cece;
 }
 
 .add-comment .add-comment-ran {
@@ -216,4 +240,48 @@ body {
     font-weight: bold;
     float: right;
     color: #0095f6;
+}
+
+
+/* body */
+
+.post-container {
+    width: 65%;
+    margin-right: 20px;
+}
+
+.side-right {
+    width: 32%;
+}
+
+
+/* block rigth side */
+
+.block {
+    width: 100%;
+    height: 200px;
+    border: 1px solid #d0cece;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: #fff;
+}
+
+.block .title {
+    padding: 10px 12px;
+    font-size: 1rem;
+}
+
+.block .title .stories {
+    font-weight: 800;
+    color: #bbb;
+}
+
+.block .title .watch-all {
+    float: right;
+    font-weight: 500;
+}
+
+.content-scroll {
+    height: 80%;
+    overflow-y: auto;
 }
